--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dirbuster",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "dirbuster implementation in Node.js",
   "bin": {
     "dirbuster": "bin/cli.js"
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/diasdavid/dirbuster",
   "dependencies": {
+    "combined-stream": "0.0.7",
+    "funil": "0.0.0",
     "generator-ronin": "^0.1.2",
     "parallel-transform": "^0.2.2",
     "pause-stream": "0.0.11",
