--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com/diasdavid/dirbuster.git"
+    "url": "git@github.com/diasdavid/node-dirbuster.git"
   },
   "author": "David Dias <daviddias.p@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/diasdavid/dirbuster/issues"
+    "url": "https://github.com/diasdavid/node-dirbuster/issues"
   },
-  "homepage": "https://github.com/diasdavid/dirbuster",
+  "homepage": "https://github.com/diasdavid/node-dirbuster",
   "dependencies": {
     "combined-stream": "0.0.7",
     "funil": "0.0.0",
