remove unnecessary deps

--- a/package.json
+++ b/package.json
@@ -29,13 +29,10 @@
   "dependencies": {
     "combined-stream": "0.0.7",
     "funil": "0.0.0",
-    "generator-ronin": "^0.1.2",
     "parallel-transform": "^0.2.2",
     "pause-stream": "0.0.11",
     "request": "^2.53.0",
-    "requestretry": "^1.2.2",
-    "ronin": "^0.3.10",
-    "yo": "^1.4.6"
+    "ronin": "^0.3.10"
   },
   "devDependencies": {
     "code": "^1.3.0",
