--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "codestyle-fix": "./node_modules/.bin/jscs -x src tests",
     "codestyle": "./node_modules/.bin/jscs src tests",
     "lint": "./node_modules/.bin/jshint .",
     "test": "node ./node_modules/.bin/lab -r tap tests/test.js | ./node_modules/.bin/tap-spec",
     "test-cov": "node ./node_modules/.bin/lab -t 100 tests/test.js"
   },
   "pre-commit": [
-    "codestyle",
+    "codestyle-fix", 
     "lint"
   ],
   "repository": {
@@ -36,7 +37,7 @@
   },
   "devDependencies": {
     "code": "^1.3.0",
-    "jscs": "^1.11.3",
+    "jscs": "^1.12.0",
     "jshint": "^2.6.3",
     "lab": "^5.5.0",
     "nock": "^1.2.0",
