--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "codestyle-fix": "./node_modules/.bin/jscs -x src tests",
-    "codestyle": "./node_modules/.bin/jscs src tests",
-    "lint": "./node_modules/.bin/jshint .",
+    "codestyle": "./node_modules/.bin/standard --format",
     "test": "node ./node_modules/.bin/lab -r tap tests/test.js | ./node_modules/.bin/tap-spec",
     "test-cov": "node ./node_modules/.bin/lab -t 100 tests/test.js"
   },
   "pre-commit": [
-    "codestyle-fix",
-    "lint"
+    "codestyle"
   ],
   "repository": {
     "type": "git",
@@ -37,11 +34,10 @@
   },
   "devDependencies": {
     "code": "^1.3.0",
-    "jscs": "^1.12.0",
-    "jshint": "^2.6.3",
     "lab": "^5.5.0",
     "nock": "^1.2.0",
     "precommit-hook": "^2.0.1",
+    "standard": "^4.5.2",
     "tap-spec": "^2.2.2"
   }
 }
